--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = ['pandas>=2.2.3',
         'numpy>=2.2.4',
         'plotly>=6.3.1',
         'jupyter',
-        'papermill'
+        'papermill',
+        'padmet'
 ]
 	     
 [project.scripts]
