--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -15,6 +15,7 @@ on:
 permissions:
   contents: read
 
+# Add Python build to release assets
 jobs:
   release-build:
     runs-on: ubuntu-latest
@@ -38,33 +39,35 @@ jobs:
           name: release-dists
           path: dist/
 
-  pypi-publish:
-    runs-on: ubuntu-latest
-    needs:
-      - release-build
-    permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
-      id-token: write
+# Publish Python package to PyPi
 
-    # Dedicated environments with protections for publishing are strongly recommended.
-    # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
-    environment:
-      name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
-      #
-      # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-      # ALTERNATIVE: exactly, uncomment the following line instead:
-      # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
+  # pypi-publish:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - release-build
+  #   permissions:
+  #     # IMPORTANT: this permission is mandatory for trusted publishing
+  #     id-token: write
 
-    steps:
-      - name: Retrieve release distributions
-        uses: actions/download-artifact@v4
-        with:
-          name: release-dists
-          path: dist/
+  #   # Dedicated environments with protections for publishing are strongly recommended.
+  #   # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
+  #   environment:
+  #     name: pypi
+  #     # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
+  #     # url: https://pypi.org/p/YOURPROJECT
+  #     #
+  #     # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
+  #     # ALTERNATIVE: exactly, uncomment the following line instead:
+  #     # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
 
-      - name: Publish release distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages-dir: dist/
+  #   steps:
+  #     - name: Retrieve release distributions
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: release-dists
+  #         path: dist/
+
+  #     - name: Publish release distributions to PyPI
+  #       uses: pypa/gh-action-pypi-publish@release/v1
+  #       with:
+  #         packages-dir: dist/
